docs: update after removing visualization

--- a/graph.html
+++ b/graph.html
@@ -29,8 +29,13 @@
 		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/eslint#build"
 		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/rollup#build"
 		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/tsconfig#build"
+		"[root] @fullcss/test-emotion#build" -> "[root] @fullcss/emotion#build"
+		"[root] @fullcss/test-emotion#build" -> "[root] @fullcss/eslint#build"
+		"[root] @fullcss/test-emotion#build" -> "[root] @fullcss/tsconfig#build"
+		"[root] @fullcss/test-styled-components#build" -> "[root] @fullcss/eslint#build"
+		"[root] @fullcss/test-styled-components#build" -> "[root] @fullcss/styled-components#build"
+		"[root] @fullcss/test-styled-components#build" -> "[root] @fullcss/tsconfig#build"
 		"[root] @fullcss/tsconfig#build" -> "[root] ___ROOT___#build"
-		"[root] @fullcss/visualization#build" -> "[root] ___ROOT___#build"
 		"[root] ___ROOT___#build" -> "[root] ___ROOT___"
 	}
 }
