chore: rename to jsxcss

--- a/graph.html
+++ b/graph.html
@@ -11,31 +11,31 @@
 	compound = "true"
 	newrank = "true"
 	subgraph "root" {
-		"[root] @fullcss/babel#build" -> "[root] ___ROOT___#build"
-		"[root] @fullcss/core#build" -> "[root] @fullcss/babel#build"
-		"[root] @fullcss/core#build" -> "[root] @fullcss/eslint#build"
-		"[root] @fullcss/core#build" -> "[root] @fullcss/rollup#build"
-		"[root] @fullcss/core#build" -> "[root] @fullcss/tsconfig#build"
-		"[root] @fullcss/docs#build" -> "[root] ___ROOT___#build"
-		"[root] @fullcss/emotion#build" -> "[root] @fullcss/babel#build"
-		"[root] @fullcss/emotion#build" -> "[root] @fullcss/core#build"
-		"[root] @fullcss/emotion#build" -> "[root] @fullcss/eslint#build"
-		"[root] @fullcss/emotion#build" -> "[root] @fullcss/rollup#build"
-		"[root] @fullcss/emotion#build" -> "[root] @fullcss/tsconfig#build"
-		"[root] @fullcss/eslint#build" -> "[root] ___ROOT___#build"
-		"[root] @fullcss/rollup#build" -> "[root] ___ROOT___#build"
-		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/babel#build"
-		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/core#build"
-		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/eslint#build"
-		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/rollup#build"
-		"[root] @fullcss/styled-components#build" -> "[root] @fullcss/tsconfig#build"
-		"[root] @fullcss/test-emotion#build" -> "[root] @fullcss/emotion#build"
-		"[root] @fullcss/test-emotion#build" -> "[root] @fullcss/eslint#build"
-		"[root] @fullcss/test-emotion#build" -> "[root] @fullcss/tsconfig#build"
-		"[root] @fullcss/test-styled-components#build" -> "[root] @fullcss/eslint#build"
-		"[root] @fullcss/test-styled-components#build" -> "[root] @fullcss/styled-components#build"
-		"[root] @fullcss/test-styled-components#build" -> "[root] @fullcss/tsconfig#build"
-		"[root] @fullcss/tsconfig#build" -> "[root] ___ROOT___#build"
+		"[root] @jsxcss/babel#build" -> "[root] ___ROOT___#build"
+		"[root] @jsxcss/core#build" -> "[root] @jsxcss/babel#build"
+		"[root] @jsxcss/core#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/core#build" -> "[root] @jsxcss/rollup#build"
+		"[root] @jsxcss/core#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/docs#build" -> "[root] ___ROOT___#build"
+		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/babel#build"
+		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/core#build"
+		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/rollup#build"
+		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/eslint#build" -> "[root] ___ROOT___#build"
+		"[root] @jsxcss/rollup#build" -> "[root] ___ROOT___#build"
+		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/babel#build"
+		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/core#build"
+		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/rollup#build"
+		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/emotion#build"
+		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/test-styled-components#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/test-styled-components#build" -> "[root] @jsxcss/styled-components#build"
+		"[root] @jsxcss/test-styled-components#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/tsconfig#build" -> "[root] ___ROOT___#build"
 		"[root] ___ROOT___#build" -> "[root] ___ROOT___"
 	}
 }
