--- a/graph/index.html
+++ b/graph/index.html
@@ -16,25 +16,23 @@
 		"[root] @jsxcss/core#build" -> "[root] @jsxcss/eslint#build"
 		"[root] @jsxcss/core#build" -> "[root] @jsxcss/rollup#build"
 		"[root] @jsxcss/core#build" -> "[root] @jsxcss/tsconfig#build"
-		"[root] @jsxcss/docs#build" -> "[root] ___ROOT___#build"
+		"[root] @jsxcss/devtool#build" -> "[root] @jsxcss/babel#build"
+		"[root] @jsxcss/devtool#build" -> "[root] @jsxcss/core#build"
+		"[root] @jsxcss/devtool#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/devtool#build" -> "[root] @jsxcss/rollup#build"
+		"[root] @jsxcss/devtool#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/docs#build" -> "[root] @jsxcss/eslint#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/babel#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/core#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/eslint#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/rollup#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/tsconfig#build"
 		"[root] @jsxcss/eslint#build" -> "[root] ___ROOT___#build"
-		"[root] @jsxcss/rollup#build" -> "[root] ___ROOT___#build"
-		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/babel#build"
-		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/core#build"
-		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/eslint#build"
-		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/rollup#build"
-		"[root] @jsxcss/styled-components#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/rollup#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/devtool#build"
 		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/emotion#build"
 		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/eslint#build"
 		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/tsconfig#build"
-		"[root] @jsxcss/test-styled-components#build" -> "[root] @jsxcss/eslint#build"
-		"[root] @jsxcss/test-styled-components#build" -> "[root] @jsxcss/styled-components#build"
-		"[root] @jsxcss/test-styled-components#build" -> "[root] @jsxcss/tsconfig#build"
 		"[root] @jsxcss/tsconfig#build" -> "[root] ___ROOT___#build"
 		"[root] ___ROOT___#build" -> "[root] ___ROOT___"
 	}
