chore(eslint): correctly

--- a/graph/index.html
+++ b/graph/index.html
@@ -13,20 +13,20 @@
 	subgraph "root" {
 		"[root] @jsxcss/babel#build" -> "[root] ___ROOT___#build"
 		"[root] @jsxcss/core#build" -> "[root] @jsxcss/babel#build"
-		"[root] @jsxcss/core#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/core#build" -> "[root] @jsxcss/eslint-config#build"
 		"[root] @jsxcss/core#build" -> "[root] @jsxcss/rollup#build"
 		"[root] @jsxcss/core#build" -> "[root] @jsxcss/tsconfig#build"
-		"[root] @jsxcss/docs#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/docs#build" -> "[root] @jsxcss/eslint-config#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/babel#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/core#build"
-		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/eslint#build"
+		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/eslint-config#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/rollup#build"
 		"[root] @jsxcss/emotion#build" -> "[root] @jsxcss/tsconfig#build"
-		"[root] @jsxcss/eslint#build" -> "[root] ___ROOT___#build"
-		"[root] @jsxcss/rollup#build" -> "[root] @jsxcss/eslint#build"
-		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/emotion#build"
-		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/eslint#build"
-		"[root] @jsxcss/test-emotion#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/emotion-test#build" -> "[root] @jsxcss/emotion#build"
+		"[root] @jsxcss/emotion-test#build" -> "[root] @jsxcss/eslint-config#build"
+		"[root] @jsxcss/emotion-test#build" -> "[root] @jsxcss/tsconfig#build"
+		"[root] @jsxcss/eslint-config#build" -> "[root] ___ROOT___#build"
+		"[root] @jsxcss/rollup#build" -> "[root] @jsxcss/eslint-config#build"
 		"[root] @jsxcss/tsconfig#build" -> "[root] ___ROOT___#build"
 		"[root] ___ROOT___#build" -> "[root] ___ROOT___"
 	}
