fix(emotion): add 'use client' directive resolved

--- a/graph/index.html
+++ b/graph/index.html
@@ -26,7 +26,7 @@
 		"[root] @jsxcss/emotion-test#build" -> "[root] @jsxcss/eslint-config#build"
 		"[root] @jsxcss/emotion-test#build" -> "[root] @jsxcss/tsconfig#build"
 		"[root] @jsxcss/eslint-config#build" -> "[root] ___ROOT___#build"
-		"[root] @jsxcss/rollup#build" -> "[root] @jsxcss/eslint-config#build"
+		"[root] @jsxcss/rollup#build" -> "[root] ___ROOT___#build"
 		"[root] @jsxcss/tsconfig#build" -> "[root] ___ROOT___#build"
 		"[root] ___ROOT___#build" -> "[root] ___ROOT___"
 	}
